--- a/style.css
+++ b/style.css
@@ -1,35 +1,48 @@
 * { margin: 0;
     padding: 0;
+    
 
+
+
+}
+  
+
+html{background-image: url(img/photo_2023-11-20_21-43-32.jpg);
+background-repeat: no-repeat;
+background-size: cover;
 
 }
 
 
-body{
+main{
+    padding-top: 100px;
+
     
 
     
 }
 
 
-.banner{background-image: url(img/batch__MG_0353.jpg);
+/*.banner{background-image: url(img/batch__MG_0353.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 200px;
+    }*/
 
-}
+
 .banner h1{
     text-decoration: none;
     font-size: 20px;
-    color: white;
+    color: whitesmoke;
     font-family:Verdana;
     display: block;
     text-align:center;
     
      
 }
+
 
 
 .banner-text{
@@ -39,15 +52,73 @@ body{
 
 
 header{
-    background-color: #fff;
+    
     width: 100%;
     height: 100px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #BD9C6C;
 }
 .logo{
     width: 250px;
     display:block;
     margin-left: auto;
     margin-right: auto;
+
+}
+ 
+@media only screen and (min-width:1000px){ 
+    .logo{
+        margin: 33px 0;
+        text-align:left;
+        padding: 0px 20px 0px 40px;
+        line-height: 20px;
+        border-right: 3px solid whitesmoke ;
+        float:left;
+    }
+
+
+      /*   nav {
+            height: 100px;
+            width: 100%;
+            background-color: #BD9C6C;
+            
+        }*/
+        
+        
+        
+        nav ul {
+            margin: 60px 0px 0px ;
+            
+            float: left;
+            
+            
+        
+        }
+        
+        
+        nav ul li {
+            list-style: none;
+            display:inline-block;
+            line-height: 50px;
+            margin-left:40px;
+            
+        
+        }
+        
+        
+        nav ul li a {
+        
+            Padding: 0 20px;
+            
+            line-height: 110px;
+        
+
+}
+
+
 
 }
 
@@ -59,25 +130,17 @@ header{
 }
 
 
-nav {
-    height: 100px;
-    width: 100%;
-    background-color: #BD9C6C;
-    
-}
-
-
-
-ul {
+nav ul {
     margin: 0;
-    text-align: center;
+    text-align:center;
+
     
     
 
 }
 
 
-ul li {
+nav ul li {
     list-style: none;
     display:inline-block;
     line-height: 50px;
@@ -86,13 +149,16 @@ ul li {
 }
 
 
-ul li a {
+nav ul li a {
     text-decoration: none;
     font-size: 14px;
-    color: black;
-    font-family: Arial;
+    color: #2C2A58;
+    font-family:arial round;
+    font-weight:bolder;
     Padding: 0 20px;
     display: block;
+    text-transform: uppercase;
+    
     
     
 
@@ -100,10 +166,171 @@ ul li a {
 }
 
 
-.home-links div{
-    width:200px;
-    height: 200px;
-    background-color: aqua;
-    margin: 16px 16px 0;
 
+
+
+  
+.box{
+    height: 200px;
+    width: 200px;
+    background-color: aqua;
+    margin: 70px 5px;
+    border: 20px, pink;
+    padding: 30px 30px 30px;
+    margin: 30px 30px 30px;
+    display: -webkit-inline-flex;
+    border-bottom-right-radius:40px;
+    border-top-left-radius:40px ;
+    margin-right: 160px;
+    
+
+
+
+}
+
+
+
+
+.home-links div h3{
+text-decoration:none;
+    font-size: 20px;
+    font-weight:bolder;
+    color: #2C2A58;
+    font-family:Verdana;
+    display: block;
+    text-align:center;
+    text-transform:uppercase;
+
+}
+.homelinks div h3 a{
+    text-decoration: none;
+}
+
+
+@media only screen and (min-width:1000px){
+.banner {
+    margin-top: 20px;
+
+}
+
+.banner  h1{
+        text-decoration: none;
+        font-size: 40px;
+        color: white;
+        font-family:Verdana;
+        text-align:center;
+        display:block;
+        
+
+       
+}
+
+
+
+
+        
+         
+    }
+
+
+
+
+
+
+
+
+
+/*FOOTER*/
+/*footer div{
+    width: 800px;
+    height: 200px;
+    padding: 40px 40px;
+    background-color:#BD9C6C;
+    margin-left:250px;
+    position: absolute;
+    bottom: 0;
+}*/
+
+
+.footer ul h4{
+    text-decoration: none;
+    font-size: 17px;
+    font-weight:bold;
+    color: white;
+    font-family:Verdana;
+    display: block;
+    text-align:center;
+    text-transform:uppercase;
+
+    
+}
+
+
+.footer ul h5{
+    text-decoration: none;
+    font-size: 14px;
+    font-weight:900;
+    color: white;
+    font-family:Verdana;
+    display: block;
+    text-align:center;
+    text-transform:uppercase;
+
+    
+}
+
+
+/*ABOUT*/
+.heading{ text-decoration: none;
+    font-size: 35px;
+    color: whitesmoke;
+    font-family:Verdana;
+    display: block;
+    text-align:center;}
+
+
+    p{
+    font-size: 14px;
+    color: whitesmoke;
+    font-family:sans-serif;
+    display: block;
+    text-align:center;
+    }
+
+    .heading2{
+        text-decoration: none;
+        font-size: 20px;
+        color: whitesmoke;
+        font-family:Verdana;
+        display: block;
+        text-align:center;}
+    
+    
+
+
+
+
+.paragraph-box p{
+    width: 800px;
+    height: 200px;
+    padding: 40px 40px;
+    line-height:30px;
+    margin-left:250px;
+    padding-top:10px;
+}
+
+
+.paragraph-box2{
+    width: 800px;
+    height: 200px;
+    padding: 40px 40px;
+    line-height:30px;
+    margin-left:250px;
+    margin-top: 50px;
+}
+
+
+.paragraph-box2 p a{
+    text-decoration: none;
+    color:#BD9C6C;
 }
