--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
   
 
-html{background-image: url(img/photo_2023-11-20_21-43-32.jpg);
+html{/*background-image: url(img/photo_2023-11-20_21-43-32.jpg)*/
 background-repeat: no-repeat;
 background-size: cover;
 
@@ -23,18 +23,26 @@ main{
 }
 
 
-/*.banner{background-image: url(img/batch__MG_0353.jpg);
+.banner{background-image: url(img/screen.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 200px;
+    margin-top: 0px;;
+    }
+
+
+   /* .banner-overlay{
+        width: 100%;
+        height: 200px;
+        background-color: rgba();
     }*/
 
 
 .banner h1{
     text-decoration: none;
-    font-size: 20px;
+    font-size: 40px;
     color: whitesmoke;
     font-family:Verdana;
     display: block;
@@ -48,6 +56,7 @@ main{
 .banner-text{
     display: table-cell;
     vertical-align: middle;
+
 }
 
 
@@ -66,6 +75,10 @@ header{
     display:block;
     margin-left: auto;
     margin-right: auto;
+
+}
+.more{display:inline-flex
+    
 
 }
  
@@ -133,6 +146,7 @@ header{
 nav ul {
     margin: 0;
     text-align:center;
+    height:60px;
 
     
     
@@ -158,87 +172,97 @@ nav ul li a {
     Padding: 0 20px;
     display: block;
     text-transform: uppercase;
-    
-    
-    
+    transition: 0.2s;
+}
 
-
+nav ul li a:hover{
+color:white;
 }
 
 
 
 
+ .dropdown button{
+    background-color: #2C2A58;
+    color: #BD9C6C;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 50px;
+    margin-left: 1010px;
+    border-radius: 4px;
+ }
 
-  
-.box{
-    height: 200px;
-    width: 200px;
-    background-color: aqua;
-    margin: 70px 5px;
-    border: 20px, pink;
-    padding: 30px 30px 30px;
-    margin: 30px 30px 30px;
-    display: -webkit-inline-flex;
-    border-bottom-right-radius:40px;
-    border-top-left-radius:40px ;
-    margin-right: 160px;
-    
-
-
-
-}
-
-
-
-
-.home-links div h3{
-text-decoration:none;
-    font-size: 20px;
-    font-weight:bolder;
-    color: #2C2A58;
-    font-family:Verdana;
-    display: block;
-    text-align:center;
-    text-transform:uppercase;
-
-}
-.homelinks div h3 a{
+ .dropdown li a{
+    display:block;
     text-decoration: none;
-}
+    padding: 10px 15px;
+    color: white;
 
+ }
+ .dropdown .content{
+    display:none;
+    position:absolute;
+    background-color: #2C2A58;
+    min-width: 100px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.82);
+    margin-left: 1290px;
+    text-decoration: none;
+ }
 
-@media only screen and (min-width:1000px){
-.banner {
-    margin-top: 20px;
+ .dropdown:hover .content{
+    display: block;
 
-}
+ }
 
-.banner  h1{
-        text-decoration: none;
-        font-size: 40px;
-        color: white;
-        font-family:Verdana;
-        text-align:center;
-        display:block;
-        
-
-       
-}
-
-
-
-
-        
-         
+ .dropdown a:hover{
+    background-color: #BD9C6C;
+ }
+ 
+.box{
+    display: grid;
+    grid-template: 250px / 250px 250px 250px;
+    border: white;
+    grid-row-gap: 60px;
+    grid-column-gap: 50px ;
+    margin-left:300px;
+    margin-top: 70px;
     }
 
 
+    .box div{
+        border-radius: 40px;
+        background-color: rgb(114, 169, 177);
+        border: 3px solid #2C2A58;
+        transition: 0.4s;
+        cursor: pointer;
+    }
+
+    .box div:hover{
+        transform:scale(0.8);
+        border-radius: 20px;
+        box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);}
 
 
+     .box div a{text-decoration:none;
+            font-size: 20px;
+            font-weight:bolder;
+            color: #2C2A58;
+            font-family:Verdana;
+            display: block;
+            text-align:center;
+            text-transform:uppercase;
+            margin-top:30px;
+     }
 
+     .grid div img{
+        margin-left: 95px;
+        color:#BD9C6C;
+        max-width:50px ;
+        max-height: 50px;
+     }
 
-
-
+  
 
 /*FOOTER*/
 /*footer div{
@@ -279,6 +303,9 @@ text-decoration:none;
     
 }
 
+.instagram-icon{
+    width: 500px;
+}
 
 /*ABOUT*/
 .heading{ text-decoration: none;
@@ -291,7 +318,7 @@ text-decoration:none;
 
     p{
     font-size: 14px;
-    color: whitesmoke;
+    color: rgb(28, 27, 27);
     font-family:sans-serif;
     display: block;
     text-align:center;
@@ -334,3 +361,136 @@ text-decoration:none;
     text-decoration: none;
     color:#BD9C6C;
 }
+
+
+/*RESOURCES*/
+.grid{
+    display: grid;
+    grid-template: 250px 250px / 250px 250px 250px;
+    grid-row-gap: 60px;
+    grid-column-gap: 50px ;
+    margin-left:300px;
+    margin-top: 70px;
+
+}
+
+
+    .grid div:nth-child(2){
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start:1;
+        grid-column-end: 2;
+    }
+    .grid div{
+        border-radius: 40px;
+        background-color: white;
+        border: 3px solid #2C2A58;
+    }
+
+    
+
+    
+
+    .grid div a{
+        text-decoration:none;
+            font-size: 20px;
+            font-weight:bolder;
+            color: #2C2A58;
+            font-family:Verdana;
+            display: block;
+            text-align:center;
+            text-transform:uppercase;
+            margin-top:30px;
+           
+    }
+     .grid div img{
+        color:#BD9C6C
+     }
+  
+
+
+     /*GALLERY*/
+     .gallery-banner{
+        background-image: url(img/gallery.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:1000px 200px;
+    width: 1000px;
+    height: 200px;
+    margin-top: 0px;
+    margin-left:220px;
+
+     }
+
+    .gallery-banner-overlay{
+     width: 100%;
+    height: 200px;
+    background-color: rgba(0, 0, 0, 0.618);
+
+     }
+
+
+     h1{
+        text-decoration: none;
+    font-size: 40px;
+    color: whitesmoke;
+    font-family:Verdana;
+    display: block;
+    text-align:center;
+    align-items: center;
+     }
+
+
+     .gallery-grid{
+        width: 80px;
+        margin: 100px auto 50px;
+        margin-left:320px;
+        display: grid;
+        grid-template: 350px 350px 350px 350px/ 350px 350px;
+        grid-row-gap: 10px;
+        grid-column-gap: 100px ;
+
+     }
+     
+
+     .gallery-grid img{
+        width: 100%;
+        cursor: pointer;
+        transition: 0.4s;
+     }
+
+
+     .gallery-grid img:hover{
+        transform:scale(0.8);
+        border-radius: 20px;
+        box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
+
+     }
+
+
+    .full-img{
+        width: 100%;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.9);
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        z-index: 100;
+    }
+
+
+    .full-img img{
+        width: 90%;
+        max-width: 500px;
+    }
+     .full-img span{
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        color: white;
+        cursor: pointer;
+
+     }
