--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ main{
     background-size: cover;
     width: 100%;
     height: 200px;
-    margin-top: 0px;;
+    margin-top: -100px;;
     }
 
 
@@ -140,6 +140,7 @@ header{
 .wrap{
     width: 1000px;
     display: flex;
+    
 
 }
 
@@ -148,6 +149,7 @@ nav ul {
     margin: 0;
     text-align:center;
     height:60px;
+
 
     
     
@@ -187,9 +189,7 @@ color:white;
 
 .dropdown{
     width: 100px;
-    height: 50px;
-    display: flex;
-    z-index: 100;
+   
 }
 
 
@@ -198,18 +198,21 @@ color:white;
     background-color: #2C2A58;
     color: #BD9C6C;
     padding: 10px 15px;
+    padding-bottom:25px ;
     border: none;
     cursor: pointer;
-    margin-left: 1200px;
-    margin-top: -100px;
+    margin-left: 1040px;
+    margin-top: -75px;
     border-radius: 4px;
+    height:10px;
   
-} 
+}
 
  .dropdown li a{
     display:block;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 5px 10px;
+    /*padding-left: 30px;*/
     color: white;
 
  }
@@ -219,18 +222,26 @@ color:white;
     background-color: #2C2A58;
     min-width: 100px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.82);
-    margin-left: 1290px;
+    margin-left: 900px;
+    margin-top:-10px;
     text-decoration: none;
     
+   
+    
+ }
+ .content li{
+    padding-left: 10px;
  }
 
-
- .dropdown:active .content{
+ .dropdown:hover .content{
     visibility: visible;
  }
 
  .dropdown a:hover{
     background-color: #BD9C6C;
+    width: 100%;
+    height: fit-content;
+
  }
  
 .box{
@@ -328,14 +339,23 @@ color:white;
 /*ABOUT*/
 .heading{ text-decoration: none;
     font-size: 35px;
-    color: whitesmoke;
+    color: #2C2A58;
     font-family:Verdana;
     display: block;
     text-align:center;}
 
 
+    .paragraph-box2 p{
+        font-size: 14px;
+        color: rgb(28, 27, 27);
+        font-family:sans-serif;
+        display: block;
+        text-align:center;
+    }
+
+
     p{
-    font-size: 14px;
+    font-size: 20px;
     color: rgb(28, 27, 27);
     font-family:sans-serif;
     display: block;
@@ -345,7 +365,7 @@ color:white;
     .heading2{
         text-decoration: none;
         font-size: 20px;
-        color: whitesmoke;
+        color: #2C2A58;
         font-family:Verdana;
         display: block;
         text-align:center;}
@@ -379,6 +399,67 @@ color:white;
     text-decoration: none;
     color:#BD9C6C;
 }
+
+.about-banner{
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:1000px 200px;
+    margin-top: -100px;
+    margin-left:220px;
+   
+}
+.about1{
+    margin-right:50px;
+    margin-left: -50px
+}
+
+.about2{
+    float: right;
+    margin-top:80px;
+    margin-right:300px;
+}
+
+.about2 h4{
+    text-decoration: none;
+        font-size: 15px;
+        color: #2C2A58;
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        display: block;
+        text-align:left;
+    }
+    .about2 h3{
+        text-decoration: none;
+            font-size: 15px;
+            color: #2C2A58;
+            font-family:Georgia, 'Times New Roman', Times, serif;
+            display: block;
+            text-align:left;
+        }
+        .about2 h2{
+            text-decoration: none;
+                font-size: 25px;
+                color: #2C2A58;
+                font-family:Georgia, 'Times New Roman', Times, serif;
+                display: block;
+                text-align:left;
+            }
+
+
+
+
+
+.ug-logo{
+    width:150px;
+    height:auto;
+    margin-top:30px;
+    border-right: 5px solid #BD9C6C;
+    line-height: 5px;
+    padding: 20px;
+    padding-right: 60px;
+    margin-left:-45px;
+}
+
 
 
 /*RESOURCES*/
@@ -424,6 +505,35 @@ color:white;
      .grid div img{
         color:#BD9C6C
      }
+
+     .resource-icon1{
+        margin-top: 40px;
+    }
+
+    .resource-icon2{
+       margin-top: 40px;
+    }
+
+    .resource-icon3{
+       margin-top: 20px;
+    }
+
+    .resource-icon4{
+        margin-top: 65px;
+    }
+
+    .resource-icon5{
+       margin-top: 40px;
+    }
+
+    .resource-icon6{
+      margin-top: 40px;
+    }
+  
+  
+  
+  
+  
   
 
 
@@ -435,7 +545,7 @@ color:white;
     background-size:1000px 200px;
     width: 1000px;
     height: 200px;
-    margin-top: 0px;
+    margin-top: -100px;
     margin-left:220px;
 
      }
@@ -453,9 +563,9 @@ color:white;
     font-size: 40px;
     color: whitesmoke;
     font-family:Verdana;
-    display: block;
     text-align:center;
     align-items: center;
+    margin-right:400px;
      }
 
 
@@ -512,3 +622,216 @@ color:white;
         cursor: pointer;
 
      }
+
+
+     /*COMPSSA*/
+     .compssa{
+        background-image: url(img/UG\ COMPSSA.png);
+        background-repeat: no-repeat;
+        background-position-x: 45cap;
+        background-position-y: 20cap;
+       background-color: rgba(245, 245, 245, 0.996)
+     }
+
+
+     .comp{
+        text-decoration: none;
+    font-size: 40px;
+    color:#2C2A58;
+    font-family:Verdana;
+    display: block;
+    text-align:center;
+    margin-top: -90px;
+
+     }
+
+
+     .heading3{
+        text-decoration:none;
+            font-size: 20px;
+            font-weight:bolder;
+            color: #2C2A58;
+            font-family:Verdana;
+            display: block;
+            text-align:center;
+            text-transform:uppercase;
+            margin-top:-30px;
+
+     }
+
+     .comp-text{
+        font-size: 20px;
+        color: rgb(28, 27, 27);
+        font-family:sans-serif;
+        display: block;
+        text-align:center;
+
+
+     }
+
+     .icon1{
+        height: 40px;
+        width: auto;
+        margin-right:20px;
+     }
+
+     .icon2{
+        height: 40px;
+        width: auto;
+        margin-right:20px;
+     }
+       
+     .icon3{
+        height: 40px;
+        width: auto;
+        margin-right:20px;
+    }
+
+    .social{
+        margin-top:200px;
+        margin-left:620px;
+        margin-right:20px;
+    }
+
+
+    .admission-banner{
+        background-image: url(img/pfd-llb-admission.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size:1000px 200px;
+        width: 1000px;
+        height: 200px;
+        margin-top: -100px;
+        margin-left:220px;
+}
+
+
+    .admission-banner-overlay{
+    width: 100%;
+    height: 200px;
+    background-color: #2c2a58c6;
+ }
+
+   .ad-text{
+    height: auto;
+    width: 900px;
+    margin-left:260px;
+    margin-top: 80px
+   }
+        
+
+   .ad-text p a{
+    text-decoration: none;
+    color:#BD9C6C;
+}
+ .ad-text div{
+    margin-bottom: 80px;
+ }
+    
+ 
+ /*CONTACT*/
+ .contact-banner{
+    background-image: url(img/st_0.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 680px;
+    margin-top: -100px;;
+ }
+
+
+ .contact-overlay{
+    width: 100%;
+    height: 680px;
+    background-color: #2c2a58e6;
+ }
+
+
+ .info-box1{
+    width:300px;
+    height:300px;
+    margin-left: 220px;
+    margin-top: 110px;
+    float: left;
+ }
+ .contact-logos1{
+margin-left:110px;
+
+ }
+ .info-text1{
+    font-size: 14px;
+    color: white;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-align:center;
+ }
+
+
+ .info-box2{
+    width:300px;
+    height:300px;
+    margin-left: 50px;
+    margin-top: 125px;
+    float: right;
+    margin-right: 250px;
+ }
+ .contact-logos2{
+margin-left:110px;
+
+ }
+ .info-text2{
+    font-size: 14px;
+    color: white;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-align:center;
+ }
+
+
+ .info-box3{
+    width:300px;
+    height:300px;
+    margin-left: -100px;
+    margin-top: 20px;
+    float:inline-end;
+ }
+ .contact-logos3{
+margin-left:100px;
+
+ }
+ .info-text3{
+    font-size: 14px;
+    color: white;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-align:center;
+ }
+.lower-box{
+    margin-top:425px;
+}
+ .info-heading{
+    font-size: 18px;
+    color: #BD9C6C;
+    font-weight: bolder;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-align:center;
+ }
+
+ .info-text4{
+    font-size: 14px;
+    color: white;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+    text-align:center;
+ }
+
+ .info-text4 a{
+    text-decoration: none;
+    color:#BD9C6C;
+ }
+  
+ .lower-box div{
+margin-bottom:20px;
+ }
