--- a/style.css
+++ b/style.css
@@ -2,49 +2,37 @@
 padding: 0;
 }
 
-
 html{
 background-repeat: no-repeat;
 background-size: cover;
-
 }
-
 
 main{
 padding-top: 100px;
 }
 
-
-.banner{background-image: url(img/screen.jpg);
+/*.banner{background-image: url(img/screen.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 width: 100%;
 height: 200px;
 margin-top: -100px;;
-}
+}*/
 
-
-
-.banner h1{
+/*.banner h1{
 text-decoration: none;
 font-size: 40px;
 color: whitesmoke;
 font-family:Verdana;
 display: block;
 text-align:center;
+}*/
 
-
-}
-
-
-
-.banner-text{
+/*.banner-text{
 display: table-cell;
 vertical-align: middle;
-
-}
-
+}*/
 
 header{
 display: block;
@@ -57,16 +45,15 @@ left: 0;
 background-color: #BD9C6C;
 z-index: 0;
 }
+
 .logo{
 width: 250px;
 display:block;
 margin-left: auto;
 margin-right: auto;
-
 }
+
 .more{display:inline-flex
-
-
 }
 
 @media only screen and (min-width:1000px){ 
@@ -79,60 +66,34 @@ border-right: 3px solid whitesmoke ;
 float:left;
 }
 
-
-
-
 nav ul {
 margin: 60px 0px 0px ;
-
 float: left;
-
-
-
 }
-
 
 nav ul li {
 list-style: none;
 display:inline-block;
 line-height: 50px;
 margin-left:40px;
-
-
 }
-
 
 nav ul li a {
-
 Padding: 0 20px;
-
 line-height: 110px;
-
-
 }
-
-
-
 }
 
 
 .wrap{
 width: 1000px;
 display: flex;
-
-
 }
-
 
 nav ul {
 margin: 0;
 text-align:center;
 height:60px;
-
-
-
-
-
 }
 
 
@@ -140,8 +101,6 @@ nav ul li {
 list-style: none;
 display:inline-block;
 line-height: 50px;
-
-
 }
 
 .header-nav{
@@ -165,12 +124,9 @@ nav ul li a:hover{
 color:white;
 }
 
-
 .dropdown{
 width: 100px;
-
 }
-
 
 .dropdown button{
 display: flex;
@@ -186,17 +142,15 @@ border-radius: 4px;
 height:10px;
 font-family:arial round;
 text-transform:uppercase;
-
 }
 
 .dropdown li a{
 display:block;
 text-decoration: none;
 padding: 5px 10px;
-/*padding-left: 30px;*/
 color: white;
-
 }
+
 .dropdown .content{
 visibility: hidden;
 position:absolute;
@@ -206,10 +160,8 @@ box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.82);
 margin-left: 900px;
 margin-top:-10px;
 text-decoration: none;
-
-
-
 }
+
 .content li{
 padding-left: 10px;
 }
@@ -222,51 +174,157 @@ visibility: visible;
 background-color: #BD9C6C;
 width: 100%;
 height: fit-content;
-
 }
 
-.box{
-display: grid;
-grid-template: 250px / 250px 250px 250px;
-border: white;
-grid-row-gap: 60px;
-grid-column-gap: 50px ;
-margin-left:300px;
-margin-top: 70px;
+.slidershow{
+    width: 1080px;
+    height: 500px;
+    overflow: hidden;
+   
 }
 
+.middle{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+}
 
-.box div{
-border-radius: 40px;
-background-color: rgb(114, 169, 177);
-border: 3px solid #2C2A58;
-transition: 0.4s;
+.navigation{
+position: absolute;
+bottom: 20px;
+left: 50%;
+transform: translateX(-50%);
+display: flex;
+}
+
+.bar{
+width: 25px;
+height: 10px;
+border: 2px solid white;
+margin: 6px;
 cursor: pointer;
+transition: 0.4s;
+border-radius: 6px;
 }
 
-.box div:hover{
-transform:scale(0.8);
-border-radius: 20px;
-box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);}
+.bar:hover{
+background: #BD9C6C;
+border: 2px solid #BD9C6C;
+}
 
+input[name="r"]{
+position: absolute;
+visibility: hidden;
+}
 
-.box div a{text-decoration:none;
-font-size: 20px;
-font-weight:bolder;
-color: #2C2A58;
-font-family:Verdana;
+.slides{
+width: 500%;
+height: 100%;
+display: flex;
+}
+
+.slide{
+ width: 20%;
+transition: 0.6s;
+}
+
+.slide img{
+    width: 100%;
+    height: 100%;
+}
+
+#r1:checked ~ .s1{
+    margin-left:0;
+}
+
+#r2:checked ~ .s1{
+    margin-left:-20%;
+}
+
+#r3:checked ~ .s1{
+    margin-left:-40%;
+}
+
+#r4:checked ~ .s1{
+    margin-left:-60%;
+}
+
+#r5:checked ~ .s1{
+    margin-left:-80%;
+}
+
+.home-links{
+    display: grid;
+    grid-template: 130px/200px 200px 200px 200px 200px ;
+    margin-top: 450px;
+    margin-left:170px;
+    margin-bottom:100px;
+    grid-column-gap: 20px;
+    border-radius:10px;
+    }
+    
+    .home-links div:nth-child(2){
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start:1;
+    grid-column-end: 2;
+    }
+    
+    
+
+.ln{background-color: rgba(212, 18, 96, 0.822);
+}
+.ue{background-color: rgba(3, 205, 205, 0.822);
+}
+.up{background-color: rgba(5, 177, 71, 0.822);
+}
+.mmp{background-color: rgba(226, 153, 7, 0.822);
+}
+.sc{background-color: rgba(82, 3, 166, 0.822);
+}
+
+.box-text{
+font-size: 19px;
+color: white;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 display: block;
 text-align:center;
-text-transform:uppercase;
-margin-top:30px;
+text-decoration: none;
+
 }
 
-.grid div img{
-margin-left: 95px;
-color:#BD9C6C;
-max-width:50px ;
-max-height: 50px;
+.box-text2{
+    font-size: 14px;
+    color: white;
+    font-family: sans-serif;
+    display: block;
+    text-align:center;
+    text-decoration: none;
+    margin-top:50px;
 }
+
+.box-text3{
+    font-size: 14px;
+    color: white;
+    font-family: sans-serif;
+    display: block;
+    text-align:center;
+    text-decoration: none;
+    margin-top:20px;
+}
+
+.box-text4{
+    font-size: 14px;
+    color: white;
+    font-family: sans-serif;
+    display: block;
+    text-align:center;
+    text-decoration: none;
+    margin-top:42px;
+}
+
+
 
 .footer ul h4{
 text-decoration: none;
@@ -277,8 +335,6 @@ font-family:Verdana;
 display: block;
 text-align:center;
 text-transform:uppercase;
-
-
 }
 
 
@@ -291,8 +347,6 @@ font-family:Verdana;
 display: block;
 text-align:center;
 text-transform:uppercase;
-
-
 }
 
 .instagram-icon{
@@ -318,6 +372,7 @@ color: rgb(28, 27, 27);
 font-family:sans-serif;
 display: block;
 text-align:center;
+margin-bottom: 40px;
 }
 
 
@@ -335,12 +390,8 @@ font-size: 20px;
 color: #2C2A58;
 font-family:Verdana;
 display: block;
-text-align:center;}
-
-
-
-
-
+text-align:center;
+}
 
 .paragraph-box p{
 width: 800px;
@@ -351,7 +402,6 @@ margin-left:250px;
 padding-top:10px;
 }
 
-
 .paragraph-box2{
 width: 800px;
 height: 200px;
@@ -361,21 +411,19 @@ margin-left:250px;
 margin-top: 50px;
 }
 
-
 .paragraph-box2 p a{
 text-decoration: none;
 color:#BD9C6C;
 }
 
 .about-banner{
-
 background-repeat: no-repeat;
 background-position: center;
 background-size:1000px 200px;
 margin-top: -100px;
 margin-left:220px;
-
 }
+
 .about1{
 margin-right:50px;
 margin-left: -50px
@@ -395,6 +443,7 @@ font-family:Georgia, 'Times New Roman', Times, serif;
 display: block;
 text-align:left;
 }
+
 .about2 h3{
 text-decoration: none;
 font-size: 15px;
@@ -403,18 +452,15 @@ font-family:Georgia, 'Times New Roman', Times, serif;
 display: block;
 text-align:left;
 }
+
 .about2 h2{
 text-decoration: none;
-    font-size: 25px;
-    color: #2C2A58;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    display: block;
-    text-align:left;
+font-size: 25px;
+color: #2C2A58;
+font-family:Georgia, 'Times New Roman', Times, serif;
+display: block;
+text-align:left;
 }
-
-
-
-
 
 .ug-logo{
 width:150px;
@@ -437,9 +483,7 @@ grid-row-gap: 60px;
 grid-column-gap: 50px ;
 margin-left:300px;
 margin-top: 70px;
-
 }
-
 
 .grid div:nth-child(2){
 grid-row-start: 1;
@@ -447,61 +491,59 @@ grid-row-end: 2;
 grid-column-start:1;
 grid-column-end: 2;
 }
+
 .grid div{
 border-radius: 40px;
 background-color: white;
 border: 3px solid #2C2A58;
 }
 
-
-
-
-
 .grid div a{
 text-decoration:none;
-    font-size: 20px;
-    font-weight:bolder;
-    color: #2C2A58;
-    font-family:Verdana;
-    display: block;
-    text-align:center;
-    text-transform:uppercase;
-    margin-top:30px;
-    
+font-size: 20px;
+font-weight:bolder;
+color: #2C2A58;
+font-family:Verdana;
+display: block;
+text-align:center;
+text-transform:uppercase;
+margin-top:30px;
 }
+
 .grid div img{
-color:#BD9C6C
+color:#BD9C6C;
+
 }
 
 .resource-icon1{
 margin-top: 40px;
+margin-left:75px;
 }
 
 .resource-icon2{
 margin-top: 40px;
+margin-left:75px;
 }
 
 .resource-icon3{
 margin-top: 20px;
+margin-left:75px;
 }
 
 .resource-icon4{
 margin-top: 65px;
+margin-left:75px;
 }
 
 .resource-icon5{
 margin-top: 40px;
+margin-left:75px;
 }
 
 .resource-icon6{
 margin-top: 40px;
+margin-left:75px;
 }
-
-
-
-
-
-
 
 
 /*GALLERY*/
@@ -514,16 +556,13 @@ width: 1000px;
 height: 200px;
 margin-top: -100px;
 margin-left:220px;
-
 }
 
 .gallery-banner-overlay{
 width: 100%;
 height: 200px;
 background-color: rgba(0, 0, 0, 0.618);
-
 }
-
 
 h1{
 text-decoration: none;
@@ -535,7 +574,6 @@ align-items: center;
 margin-right:0px;
 }
 
-
 .gallery-grid{
 width: 80px;
 margin: 100px auto 50px;
@@ -544,9 +582,7 @@ display: grid;
 grid-template: 350px 350px 350px 350px/ 350px 350px;
 grid-row-gap: 10px;
 grid-column-gap: 100px ;
-
 }
-
 
 .gallery-grid img{
 width: 100%;
@@ -554,14 +590,11 @@ cursor: pointer;
 transition: 0.4s;
 }
 
-
 .gallery-grid img:hover{
 transform:scale(0.8);
 border-radius: 20px;
 box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
-
 }
-
 
 .full-img{
 width: 100%;
@@ -576,20 +609,18 @@ justify-content: center;
 z-index: 100;
 }
 
-
 .full-img img{
 width: 90%;
 max-width: 500px;
 }
+
 .full-img span{
 position: absolute;
 top: 5%;
 right: 5%;
 color: white;
 cursor: pointer;
-
 }
-
 
 /*COMPSSA*/
 .compssa{
@@ -600,7 +631,6 @@ background-position-y: 20cap;
 background-color: rgba(245, 245, 245, 0.996)
 }
 
-
 .comp{
 text-decoration: none;
 font-size: 40px;
@@ -609,21 +639,18 @@ font-family:Verdana;
 display: block;
 text-align:center;
 margin-top: -90px;
-
 }
-
 
 .heading3{
 text-decoration:none;
-    font-size: 20px;
-    font-weight:bolder;
-    color: #2C2A58;
-    font-family:Verdana;
-    display: block;
-    text-align:center;
-    text-transform:uppercase;
-    margin-top:-30px;
-
+font-size: 20px;
+font-weight:bolder;
+color: #2C2A58;
+font-family:Verdana;
+display: block;
+text-align:center;
+text-transform:uppercase;
+margin-top:-30px;
 }
 
 .comp-text{
@@ -632,8 +659,6 @@ color: rgb(28, 27, 27);
 font-family:sans-serif;
 display: block;
 text-align:center;
-
-
 }
 
 .icon1{
@@ -660,7 +685,6 @@ margin-left:620px;
 margin-right:20px;
 }
 
-
 .admission-banner{
 background-image: url(img/pfd-llb-admission.jpg);
 background-repeat: no-repeat;
@@ -671,7 +695,6 @@ height: 200px;
 margin-top: -100px;
 margin-left:220px;
 }
-
 
 .admission-banner-overlay{
 width: 100%;
@@ -686,15 +709,14 @@ margin-left:260px;
 margin-top: 80px
 }
 
-
 .ad-text p a{
 text-decoration: none;
 color:#BD9C6C;
 }
+
 .ad-text div{
 margin-bottom: 80px;
 }
-
 
 /*CONTACT*/
 .contact-banner{
@@ -707,13 +729,11 @@ height: 680px;
 margin-top: -100px;;
 }
 
-
 .contact-overlay{
 width: 100%;
 height: 680px;
 background-color: #2c2a58e6;
 }
-
 
 .info-box1{
 width:300px;
@@ -722,10 +742,11 @@ margin-left: 220px;
 margin-top: 110px;
 float: left;
 }
+
 .contact-logos1{
 margin-left:110px;
-
 }
+
 .info-text1{
 font-size: 14px;
 color: white;
@@ -733,7 +754,6 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 display: block;
 text-align:center;
 }
-
 
 .info-box2{
 width:300px;
@@ -743,10 +763,11 @@ margin-top: 125px;
 float: right;
 margin-right: 250px;
 }
+
 .contact-logos2{
 margin-left:110px;
-
 }
+
 .info-text2{
 font-size: 14px;
 color: white;
@@ -755,7 +776,6 @@ display: block;
 text-align:center;
 }
 
-
 .info-box3{
 width:300px;
 height:300px;
@@ -763,10 +783,11 @@ margin-left: -100px;
 margin-top: 20px;
 float:inline-end;
 }
+
 .contact-logos3{
 margin-left:100px;
-
 }
+
 .info-text3{
 font-size: 14px;
 color: white;
@@ -774,9 +795,11 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 display: block;
 text-align:center;
 }
+
 .lower-box{
 margin-top:425px;
 }
+
 .info-heading{
 font-size: 18px;
 color: #BD9C6C;
@@ -812,7 +835,6 @@ display: block;
 text-align:center;
 }
 
-
 .contact-h1{
 text-decoration: none;
 font-size: 40px;
@@ -821,9 +843,7 @@ font-family:Verdana;
 text-align:center;
 align-items: center;
 margin-right:320px;
-
 }
-
 
 /*RESEARCH*/
 .research1{
@@ -842,9 +862,7 @@ grid-row-gap: 60px;
 grid-column-gap: 50px ;
 margin-left:230px;
 margin-top: 70px;
-
 }
-
 
 .event-grid div:nth-child(2){
 grid-row-start: 1;
@@ -852,11 +870,13 @@ grid-row-end: 2;
 grid-column-start:1;
 grid-column-end: 2;
 }
+
 .event-grid div{
 border-radius: 20px;
 background-color: #BD9C6C;
 border: 3px solid #2C2A58;
 }
+
 .event-grid div .inner-box1{
 width:130px;
 height:150px;
@@ -865,7 +885,6 @@ margin-top:-122px;
 background-color: #2C2A58;
 border: 3px solid #BD9C6C;
 display:flex;
-
 }
 
 .event-grid div .inner-box2{
@@ -875,7 +894,6 @@ margin-left:311px;
 margin-top:-122px;
 background-color: #2C2A58;
 border: 3px solid #BD9C6C;
-
 }
 
 .event-grid div .inner-box3{
@@ -885,7 +903,6 @@ margin-left:311px;
 margin-top: -122px;
 background-color: #2C2A58;
 border: 3px solid #BD9C6C;
-
 }
 
 .event-grid div .inner-box4{
@@ -895,7 +912,6 @@ margin-left:311px;
 margin-top:-122px;
 background-color: #2C2A58;
 border: 3px solid #BD9C6C;
-
 }
 
 
@@ -906,7 +922,6 @@ margin-left:311px;
 margin-top:-122px;
 background-color: #2C2A58;
 border: 3px solid #BD9C6C;
-
 }
 
 .event-grid div .inner-box6{
@@ -916,7 +931,6 @@ margin-left:311px;
 margin-top:-122px;
 background-color: #2C2A58;
 border: 3px solid #BD9C6C;
-
 }
 
 
@@ -937,7 +951,6 @@ display: block;
 text-align:center;
 margin-right:140px;
 margin-top:20px;
-
 }
 
 .date2{
@@ -982,9 +995,6 @@ font-family: sans-serif;
 display: block;
 text-align:center;
 margin-top: 70px;
-
-
-
 }
 
 .ad-h1{
